may/src/codegen/tests/snapshots/may__codegen__tests__two.snap
---
source: may/src/codegen/tests/mod.rs
expression: PrettyPrint(&converted_leaf)
---
(
    (
        vcon
        (
            ind
            Set0
            "Nat"
            ()
            (
                (
                    (
                        0
                    )
                    ()
                )
                (
                    ()
                    ()
                )
            )
        )
        0
    )
    (
        (
            vcon
            (
                ind
                Set0
                "Nat"
                ()
                (
                    (
                        (
                            0
                        )
                        ()
                    )
                    (
                        ()
                        ()
                    )
                )
            )
            0
        )
        (
            vcon
            (
                ind
                Set0
                "Nat"
                ()
                (
                    (
                        (
                            0
                        )
                        ()
                    )
                    (
                        ()
                        ()
                    )
                )
            )
            1
        )
    )
)
